--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 Django==2.1.7
-mysqlclient==1.4.6
 scikit-learn==0.24.2
 xgboost==1.4.2
 joblib==1.0.1
 numpy==1.19.5
 pandas==1.1.5
 tensorflow==2.4.1
-keras==2.4.3
 matplotlib==3.3.4
 seaborn==0.11.1
 openpyxl==3.0.7
 python-dateutil==2.8.1
+gunicorn
+whitenoise
+dj-database-url
