--- a/requirements.txt
+++ b/requirements.txt
@@ -67,7 +67,7 @@ tensorflow-estimator==2.4.0
 termcolor==1.1.0
 threadpoolctl==3.5.0
 tomli==2.2.1
-typing_extensions
+typing_extensions==3.7.4
 urllib3==2.2.3
 Werkzeug==3.0.6
 wrapt==1.12.1
