--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,16 @@
-absl-py==0.15.0
-astunparse==1.6.3
-cachelib==0.13.0
-cachetools==5.5.2
-certifi==2025.7.14
-charset-normalizer==3.4.2
-click==8.1.8
-colorama==0.4.6
-cycler==0.12.1
 Django==2.1.7
-et_xmlfile==2.0.0
-exceptiongroup==1.3.0
-Flask==2.2.2
-Flask-Session==0.8.0
-Flask-WTF==1.2.1
-flatbuffers==1.12
-gast==0.3.3
-git-filter-repo==2.47.0
-google-auth==2.40.3
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.32.0
-h5py==2.10.0
-idna==3.10
-importlib_metadata==8.5.0
-iniconfig==2.1.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.0.1
-Keras==2.4.3
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.7
-Markdown==3.7
-MarkupSafe==2.1.5
-matplotlib==3.3.4
-msgspec==0.18.6
-mysql-connector-python==8.0.30
 mysqlclient==1.4.6
-numpy==1.19.5
-oauthlib==3.3.1
-openpyxl==3.0.7
-opt-einsum==3.3.0
-packaging==25.0
-pandas==1.1.5
-pillow==10.4.0
-pluggy==1.5.0
-protobuf==3.20.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pyparsing==3.1.4
-pytest==8.3.5
-python-dateutil==2.8.1
-pytz==2025.2
-PyYAML==6.0.2
-requests==2.32.4
-requests-oauthlib==2.0.0
-rsa==4.9.1
 scikit-learn==0.24.2
-scipy==1.10.1
-seaborn==0.11.1
-six==1.15.0
-tensorboard==2.11.2
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.4.1
-tensorflow-estimator==2.4.0
-termcolor==1.1.0
-threadpoolctl==3.5.0
-tomli==2.2.1
-typing_extensions==3.7.4
-urllib3==2.2.3
-Werkzeug==3.0.6
-wrapt==1.12.1
-WTForms==3.1.2
 xgboost==1.4.2
-zipp==3.20.2
+joblib==1.0.1
+numpy==1.19.5
+pandas==1.1.5
+tensorflow==2.4.1
+keras==2.4.3
+matplotlib==3.3.4
+seaborn==0.11.1
+openpyxl==3.0.7
+python-dateutil==2.8.1
+gunicorn
+whitenoise
+dj-database-url
